--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <iframe
       src="https://www.canva.com/design/DAGtaoviaTE/zToPLcTHHjxRFnbxUXY_EA/view?embed"
       allowfullscreen
-      loading="lazy"
+      loading="fast"
     ></iframe>
   </div>
 
